Fix log display on small screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,5 +72,5 @@ input[type=submit]:hover{
 #logs{
   padding-top: 20px;
   padding-left: 20px;
-  width: 240px;
+  width: 190px;
 }
